--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         container_tag:
-        - master-nightly-bionic 
-        - 2.6.5-bionic
-        - 2.7.0-bionic
+        - 3.0-focal
+        - 2.6-bionic
+        - 2.7-bionic
     container:
       image: rubylang/ruby:${{ matrix.container_tag }}
     steps:
